# dmishin-pyscript

./: .emacs  README
apps/: dictshell.py  jm.py  junkmaster.py  learner.py  my-optimization.py  rootlocus.py  script.sql  sql_shell.py  test.db
cpp/: alife.cpp  common.h  grid.cpp  grid.h  located.h  make.sh  vec2.cpp  vec2.h
cpp/alife/: README  TODO  configure.ac
cpp/alife/src/: Makefile.am  abstract_simulator.h  alife_glut.cpp  alife_glut.h  body.h  brain.cpp  brain.h  breeder.h  food.h  food_breeder.cpp  food_breeder.h  ftype.cpp  ftype.h  glut_controller.cpp  glut_controller.h  glut_viewport.cpp  glut_viewport.h  grid.cpp  grid.h  item-acceptor.cpp  item-acceptor.h  located.h  main.cpp  matrix_brain.cpp  matrix_brain.h  matrix_breeder.cpp  matrix_breeder.h  mobile.cpp  mobile.h  motor.cpp  motor.h  oriented.h  parameters.h  pseudo_generator.h  random_brain.cpp  random_brain.h  random_choise.cpp  random_choise.h  regen_automake.py  rotation.h  (+10 more)
cpp/alife2/: configure.ac
cpp/alife2/src/: Makefile.am  geometry_io.cpp  geometry_io.hpp  glut_view.cpp  glut_view.hpp  grid.cpp  grid.hpp  grid_cell.cpp  grid_item.cpp  grid_item.hpp  grid_mt.hpp  item_enumerator.cpp  item_enumerator.hpp  located.cpp  located.hpp  main.cpp  mobile.cpp  mobile.hpp  point.hpp  rotation.cpp  rotation.hpp  sequential_simulator.cpp  sequential_simulator.hpp  simulated.hpp  simulator.cpp  simulator.hpp  ticker.hpp  util.cpp  util.hpp  world.cpp  world.hpp
cpp/autotools-tutor/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  description-pak
cpp/expat/: build.sh  expat_wrapper.cpp  expat_wrapper.hpp  test-w.xml  test.cpp  test.xml
cpp/hyperbolic-cellular/: bitchain.h  bitchain_test.cpp  compact_array.h  pentachain.h  pentagrid_neighbores.h  test_carray.cpp  test_pentachain.cpp
cpp/librusek/: build.sh  build.sh~  test-zip.cpp
cpp/point-cloud/: Makefile  cloud  cloud.cpp  plot.sh
cpp/workload-balancer/: configure.ac
cpp/workload-balancer/src/: Makefile.am  balance_method.cpp  balance_method.hpp  balanced_worker.cpp  balanced_worker.hpp  balancer.cpp  balancer.hpp  balancer_types.hpp  concurrent_runner.cpp  concurrent_runner.hpp  concurrent_worker.hpp  main.cpp  main_concurrent.cpp  my_boost_util.hpp  simulated.hpp  trace.hpp
lib/: dictd_index.py  mfun.py  numtheor.py  rational.py
lisp/: .test.lisp.swp  test.lisp  test1.lisp
math/: min_ortho.py  prime-polynomials.py
math/photonist/: main.cpp
other/: axf_fob_eq_c.py  chanseer.py  count_dets.py  dequartez.py  file.xml  funcroot.py  fzero.py  hilb.py  hilb_gen.py  hyp_pentagon_xml.py  intervalf.py  junk2.py  junkmaster.py  lobspace.py  lobspace_refactor.py  marcubes.py  marcubes_generate.py  mpmath.py  my_utils.py  mydecor.py  neurowc.py  nmead.py  nrn.py  nrn_swimmer.py  optim.py  optim_parabolic.py  padic.py  poly2rat.py  ppmatrix.py  pyvbo.py  qtree.py  rootlocus.py  sbot1.py  sbots.py  shife.py  space_pentagon_field.py  stereogram.py  strikeout.py  symbolic.py  test-geom.xml  (+5 more)
other/apps/: life.py
scala/: Manifest.mf  mandel-test.cpp  scala1.scala
tests/: numtheor_test.py
util/: add_new_class.py  tex_convert.py
utils/: cedict2dictzip.py
(+113 files in other folders)
