bin_PROGRAMS = alife
alife_SOURCES = \
	world.h \
	main.cpp \
	motor.cpp \
	grid.h \
	random_choise.cpp \
	vec2.h \
	glut_viewport.h \
	ftype.h \
	sensor.cpp \
	random_brain.h \
	breeder.h \
	oriented.h \
	rotation.h \
	sensor.h \
	matrix_breeder.cpp \
	simulator.cpp \
	random_choise.h \
	matrix_breeder.h \
	located.h \
	mobile.cpp \
	matrix_brain.cpp \
	grid.cpp \
	pseudo_generator.h \
	body.h \
	ftype.cpp \
	motor.h \
	abstract_simulator.h \
	food.h \
	alife_glut.h \
	alife_glut.cpp \
	matrix_brain.h \
	random_brain.cpp \
	simulator.h \
	brain.cpp \
	food_breeder.cpp \
	food_breeder.h \
	world.cpp \
	glut_viewport.cpp \
	mobile.h \
	brain.h \
	ticker.h 
alife_LDFLAGS = -lglut -lboost_thread-mt
