bin_PROGRAMS = alife
alife_SOURCES = \
	matrix_breeder.cpp \
	random_brain.cpp \
	abstract_simulator.h \
	sensor.cpp \
	glut_viewport.h \
	food.h \
	grid.h \
	simulator.h \
	sensor.h \
	random_choise.h \
	brain.cpp \
	world.cpp \
	ticker.h \
	random_choise.cpp \
	glut_controller.h \
	world.h \
	mobile.cpp \
	matrix_brain.cpp \
	located.h \
	glut_viewport.cpp \
	matrix_brain.h \
	rotation.h \
	ftype.cpp \
	motor.cpp \
	food_breeder.cpp \
	mobile.h \
	random_brain.h \
	glut_controller.cpp \
	oriented.h \
	ftype.h \
	grid.cpp \
	motor.h \
	alife_glut.h \
	vec2.h \
	food_breeder.h \
	pseudo_generator.h \
	body.h \
	breeder.h \
	alife_glut.cpp \
	main.cpp \
	simulator.cpp \
	matrix_breeder.h \
	brain.h 
alife_LDFLAGS = -lglut -lboost_thread-mt
