bin_PROGRAMS = alife2
alife2_LDFLAGS = -lglut -lboost_thread-mt
alife2_SOURCES = main.cpp point.hpp rotation.hpp rotation.cpp util.hpp \
	located.hpp grid.cpp grid.hpp \
	grid_item.hpp grid_item.cpp located.cpp \
	grid_cell.cpp \
	item_enumerator.hpp item_enumerator.cpp\
	util.cpp \
	mobile.hpp mobile.cpp \
	simulated.hpp \
	world.cpp world.hpp \
	glut_view.hpp glut_view.cpp